--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ var arr=[], oldarr=[], copy=[]
 var work=false, sorted, chartType=1
 const sortCol="green", wrongCol="red", checkCol="orange"
 const initCol=["brown","purple"]
-var p,steps=0, oldsteps=0 delay, go=0
+var p,steps=0, oldsteps=0, delay, go=0
   
 describe()
 gen()
