--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@ gen()
  
 function gen(){
  if(work){return}
- size=+(choiceSize.value)
- 
+ size=+(choiceSize.value) 
  if(size==9){
   for(i=0;i<size;i++){
    arr[i]={val: 9-i,
@@ -76,7 +75,7 @@ function gen(){
            y: Math.floor(.8*c1.height),
            col: initCol[i%2]
           }
-  }
+   }
  }
   else{
    for(i=0;i<size;i++){
@@ -88,9 +87,9 @@ function gen(){
      if(size==7){arr[i].val=prompt("Enter item "+(i+1) ) }
    }
  }
-  steps=0; oldsteps=0
-  oldarr=JSON.parse( JSON.stringify(arr) )
-  display(arr)
+ steps=0; oldsteps=0
+ oldarr=JSON.parse( JSON.stringify(arr) )
+ display(arr)
 }
 
 function describe(){
@@ -267,6 +266,10 @@ function swap(a,b){
 function back(){
   arr=JSON.parse( JSON.stringify(oldarr) )
   steps=oldsteps
+  display(arr)
+}
+function chart(){
+  chartType=-chartType
   display(arr)
 }
 function finish(){
