--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ function describe(){
     text2.value="Comparing 1st and 2nd element\n-swap if 1st element is greater\nRepeat for each pair\nIf any swaps done then restart process"
   }
     if(choiceAlg.value=="Insertion"){
-    text1.value="Insert ..."
-    text2.value="Insert ..."
+    text1.value="Place holder for insertion sort"
+    text2.value="Second placeholder for insertion"
   }
   if(choiceAlg.value=="Selection"){
     text1.value="Selection sort is ..." 
