--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ function describe(){
     text2.value="Comparing 1st and 2nd element\n-swap if 1st element is greater\nRepeat for each pair\nIf any swaps done then restart process"
   }
     if(choiceAlg.value=="Insertion"){
-    text1.value="Place holder for insertion sort"
+    text1.value="Place holder for insertion sort\nthis is line 2\nline 3"
     text2.value="Second placeholder for insertion"
   }
   if(choiceAlg.value=="Selection"){
