--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  <br>
  <canvas id="Canvas1" style="border: 1px solid"></canvas>
  <br>
- <textarea id="myText1" rows="12" style="resize: none; border: 2px solid; width: 49%"></textarea>
+ <textarea id="myText1" rows="12" style="resize: none; border: 2px solid; width: 49%" readonly></textarea>
  <textarea id="myText2" rows="12" style="resize: none; border: 2px solid; width: 49%"></textarea>
  <br>
  <label for="setsize" style="font-size: 2vw">Edit Data Size</label>
