--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
  <br>
  <canvas id="Canvas1" style="border: 1px solid"></canvas>
  <br>
- <textarea id="myText1" rows="12" style="resize: none; border: 2px solid; width: 49%" readonly></textarea>
- <textarea id="myText2" rows="12" style="resize: none; border: 2px solid; width: 49%" readonly></textarea>
+ <textarea id="myText1" rows="17" style="resize: none; border: 2px solid; width: 49%" readonly></textarea>
+ <textarea id="myText2" rows="17" style="resize: none; border: 2px solid; width: 49%" readonly></textarea>
  <br>
  <label for="setsize" style="font-size: 2vw">Edit Data Size</label>
  <select id="setsize" style="font-size: 2vw">
@@ -118,16 +118,16 @@ function gen(){
 
 function describe(){
      if(choiceAlg.value=="Bubble"){
-    text1.value="Bubble sort functions by iteratively going through the array for the number of elements within the array. It swaps as it goes moving the largest number it has found up the list until it reaches a larger number and then begins to bubble that up to the top. Once it has reached the top it then repeats this process for however many elements in the array there is. Due to this it has an average and worst case of O(n2) and a best case in the event the numbers are already sorted of O(n). As it will not create any more variables besides from two to index the array as the list gets longer it has a space complexity of O(1)."
+    text1.value="Bubble sort functions by iteratively going through the array for the number of elements within the array. It swaps as it goes moving the largest number it has found up the list until it reaches a larger number and then begins to bubble that up to the top. Once it has reached the top it then repeats this process for however many elements in the array there is. Due to this it has an average and worst case of O(n^2) and a best case in the event the numbers are already sorted of O(n). As it will not create any more variables besides from two to index the array as the list gets longer it has a space complexity of O(1)."
     text2.value = "procedure bubbleSort(array)\n\t n = array.length\n\t for i = 0 to n-2\n\t\t for j = 0 to n-i-2\n\t\t\t if array[j] > array[j+1] then\n\t\t\t\t temp = array[j]\n\t\t\t\t array[j] = array[j+1]\n\t\t\t\t array[j+1] = temp\n\t\t\t endif\n\t\t endfor\n\t endfor\nendprocedure"
      }
     if(choiceAlg.value=="Insertion"){
-    text1.value="Place holder for insertion sort\nthis is line 2\nline 3"
-    text2.value="Second placeholder for insertion"
+    text1.value="Insertion sort is an algorithm that functions by splitting the list into two sublists a sorted and unsorted. This starts from using the first element in the array as sorted and moving the pointer along while “inserting” new numbers into their correct order. Due to the more logical sorting, it will on average be faster than bubble sort however due to the two loops this again has a time complexity of O(n^2) both on average and on worst case. For the best case it will simply go through the array once so has a best case of O(n). It will only create few additional variables which will not change depending on the size thus it has a space complexity of O(1)."
+    text2.value = "procedure insertionSort(array)\n\t for i = 0 to array.length - 1\n\t\t j = i - 1\n\t\t while j >= 0\n\t\t\t if array[j + 1] < array[j] then\n\t\t\t\t temp = array[j]\n\t\t\t\t array[j] = array[j + 1]\n\t\t\t\t array[j + 1] = temp\n\t\t\t else\n\t\t\t\t break\n\t\t\t endif\n\t\t\t j = j - 1\n\t\t endwhile\n\t endfor\nendprocedure"
   }
   if(choiceAlg.value=="Selection"){
-    text1.value="Selection sort is ..." 
-    text2.value="find lowest item"
+    text1.value="Selection sort functions by iteratively going through the entire list to find the smallest element. This will then be swapped with the first element. This then repeats while not counting those already sorted smallest ones throughout the entire array until it is sorted. Due to the fact that selection sort must go through the whole array for the number of times there are numbers within the array the number of comparisons will be ((n^2)-n)/2 which in big O notation simplifies to O(n^2). This results in the time complexity of selection sort being O(n^2) regardless of how the array is originally sorted." 
+    text2.value = "procedure SelectionSort(array)\n\t for i = 0 to array.length - 1\n\t\t min = i\n\t\t for j = i + 1 to array.length - 1\n\t\t\t if array[j] < array[min] then\n\t\t\t\t min = j\n\t\t\t endif\n\t\t endfor\n\t\t temp = array[i]\n\t\t array[i] = array[min]\n\t\t array[min] = temp\n\t endfor\nendprocedure"
   }
 }
  
