--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <option value="Selection">Selection Sort</option>
     <option value="Statistics">Statistics</option>
   </select>
-  <button id="slider">
-     <img src="slider1.png" onclick="chart()" style="width: 12vw; height: 6vh;">
-  </button>
+  <input class="toggle" type="checkbox" onclick="chart()" />
   <button id="generate" onclick="gen()">
      <img src="gen100.png" style="width: 6vw; height: 6vh;">
   </button>
