--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ function selectSort(s){
 }
  
 function insertSort(i){  
-  if(i>=size-1){ finish(); return }
+  if(i>=size){ finish(); return }
   arr[i].col=checkCol
   display(arr)
   arr[i].col=sortCol
